WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 205850
ImageBitmap can't be created in workers in some cases due to main-thread assert in ImageSource
https://bugs.webkit.org/show_bug.cgi?id=205850
Summary
ImageBitmap can't be created in workers in some cases due to main-thread asse...
Chris Lord
Reported
2020-01-07 02:19:23 PST
ImageBitmap is usable in workers (as it should be), but if you try to create an ImageBitmap from data inside a worker in a debug build, you'll hit a main-thread assert in ImageSource. I think these asserts should actually be same-thread asserts, the code looks safe to use off the main thread (but may well be unsafe to use across threads).
Attachments
Patch
(4.58 KB, patch)
2020-01-07 08:37 PST
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Patch
(4.77 KB, patch)
2020-01-07 09:34 PST
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Patch
(8.35 KB, patch)
2020-01-08 04:06 PST
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Lord
Comment 1
2020-01-07 08:37:52 PST
Created
attachment 386976
[details]
Patch
Chris Lord
Comment 2
2020-01-07 09:34:21 PST
Created
attachment 386981
[details]
Patch
Dean Jackson
Comment 3
2020-01-07 15:32:32 PST
Comment on
attachment 386981
[details]
Patch Can this be tested?
Chris Lord
Comment 4
2020-01-08 01:09:26 PST
(In reply to Dean Jackson from
comment #3
)
> Comment on
attachment 386981
[details]
> Patch > > Can this be tested?
So there are a bunch of tests for off-main-thread use of ImageBitmap in
bug 205445
, but this blocks that bug - I could selectively re-enable a few in this bug? Though in fairness, they'd only be running on Gtk/WPE, so maybe it's a good idea to write a specific test... Will do.
Chris Lord
Comment 5
2020-01-08 04:06:34 PST
Created
attachment 387094
[details]
Patch
WebKit Commit Bot
Comment 6
2020-01-09 12:52:41 PST
Comment on
attachment 387094
[details]
Patch Clearing flags on attachment: 387094 Committed
r254291
: <
https://trac.webkit.org/changeset/254291
>
WebKit Commit Bot
Comment 7
2020-01-09 12:52:43 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2020-01-09 12:53:15 PST
<
rdar://problem/58453877
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug