ImageBitmap can't be created in workers in some cases due to main-thread assert in ImageSource https://bugs.webkit.org/show_bug.cgi?id=205850

Patch by Chris Lord <clord@igalia.com> on 2020-01-09
Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/2dcontext/imagebitmap/createImageBitmap-in-worker-transfer-expected.txt: Added.
* web-platform-tests/2dcontext/imagebitmap/createImageBitmap-in-worker-transfer.html: Added.
* web-platform-tests/2dcontext/imagebitmap/createImageBitmap-worker.js: Added.

Source/WebCore:

Assert that we're destroyed on the creation thread, rather than on the
main thread. This is required for ImageBitmap creation in workers in
debug builds.

Test: imported/w3c/web-platform-tests/2dcontext/imagebitmap/createImageBitmap-in-worker-transfer.html

* platform/graphics/ImageSource.cpp:
(WebCore::ImageSource::ImageSource):
(WebCore::ImageSource::~ImageSource):
(WebCore::ImageSource::startAsyncDecodingQueue):
* platform/graphics/ImageSource.h:

Canonical link: https://commits.webkit.org/219140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254291 268f45cc-cd09-0410-ab3c-d52691b4dbfc